--- a/ShopGiay/Views/Home/Index.cshtml
+++ b/ShopGiay/Views/Home/Index.cshtml
@@ -25,16 +25,14 @@
 
 
             </div>
+        </div>
+    </div>
 
             <!-- Single Slider -->
             <!-- Hero-btn -->
             <!-- Hero-btn -->
             <!-- Hero-btn -->
-            <div class="hero__btn" data-animation="fadeInLeft" data-delay=".8s" data-duration="2000ms">
-                <a href="shop.html" class="btn hero-btn">Shop Now</a>
-            </div>
-        </div>
-    </div>
+            
     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4 d-none d-sm-block">
         <div class="hero__img" data-animation="bounceIn" data-delay=".4s">
 
@@ -46,7 +44,11 @@
     <!-- slider Area End-->
     <!--? Video Area Start -->
 
-    <div class="main___29g8L bg-video___30amV layer_video___2PYSY "><div class="container___1hJPV bg-video___30amV"><video loop="" autoplay="" playsinline="" src="https://brand.assets.adidas.com/video/upload/q_auto,vc_auto/video/upload/running-fw21-4dfwd-launch-hp-masthead-large-3d-d_qgwrvo.mp4"></video></div></div>
+    <div class="main___29g8L bg-video___30amV layer_video___2PYSY ">
+        <div class="container___1hJPV bg-video___30amV">
+            <video loop="" autoplay="" playsinline="" src="https://brand.assets.adidas.com/video/upload/q_auto,vc_auto/video/upload/running-fw21-4dfwd-launch-hp-masthead-large-3d-d_qgwrvo.mp4"></video>
+        </div>
+    </div>
 
 
     <!-- Video Area End -->
