--- a/ShopGiay/Views/Home/Index.cshtml
+++ b/ShopGiay/Views/Home/Index.cshtml
@@ -148,7 +148,7 @@
                             Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.
                         </p>
-                        <a href="shop.html" class="btn">Show Watches</a>
+                        <a href="shop.html" class="btn">Show Sneaker</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-10">
@@ -170,7 +170,7 @@
                             Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.
                         </p>
-                        <a href="shop.html" class="btn">Show Watches</a>
+                        <a href="shop.html" class="btn">Show Sneaker</a>
                     </div>
                 </div>
             </div>
